ComparableDataSetProducerにSourceを任意の順番で指定してTableを呼び出すためのメソッドを追加