@@ -4,7 +4,7 @@ import org.dbunit.dataset.DataSetException;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import yo.dbunitcli.dataset.ComparableDataSetImpl;
+import yo.dbunitcli.dataset.ComparableDataSet;
 import yo.dbunitcli.dataset.ComparableDataSetParam;
 import yo.dbunitcli.dataset.ComparableTable;
 import yo.dbunitcli.dataset.Parameter;
@@ -12,6 +12,7 @@ import yo.dbunitcli.dataset.Parameter;
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 public class ComparableCSVQueryDataSetProducerTest {
 
@@ -19,14 +20,14 @@ public class ComparableCSVQueryDataSetProducerTest {
 
     @BeforeEach
     public void setUp() throws UnsupportedEncodingException {
-        this.resource = URLDecoder.decode(this.getClass().getResource(".").getPath(), "UTF-8")
+        this.resource = URLDecoder.decode(this.getClass().getResource(".").getPath(), StandardCharsets.UTF_8)
                 .replace("target/test-classes", "src/test/resources");
     }
 
     @Test
     public void createDataSetFromFile() throws DataSetException {
         final File src = new File(this.resource, "csvquery/singlefile/joinQuery.txt");
-        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        final ComparableDataSet actual = new ComparableDataSet(
                 new ComparableCSVQueryDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -56,7 +57,7 @@ public class ComparableCSVQueryDataSetProducerTest {
     @Test
     public void createDataSetFromDirectoryContainsSingleFile() throws DataSetException {
         final File src = new File(this.resource, "csvquery/singlefile");
-        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        final ComparableDataSet actual = new ComparableDataSet(
                 new ComparableCSVQueryDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -86,7 +87,7 @@ public class ComparableCSVQueryDataSetProducerTest {
     @Test
     public void createDataSetFromDirectoryContainsMultiFile() throws DataSetException {
         final File src = new File(this.resource, "csvquery/multifile");
-        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        final ComparableDataSet actual = new ComparableDataSet(
                 new ComparableCSVQueryDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -132,7 +133,7 @@ public class ComparableCSVQueryDataSetProducerTest {
     @Test
     public void createDataSetFromDirectoryOnlyIncludeFile() throws DataSetException {
         final File src = new File(this.resource, "csvquery/multifile");
-        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        final ComparableDataSet actual = new ComparableDataSet(
                 new ComparableCSVQueryDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
@@ -163,7 +164,7 @@ public class ComparableCSVQueryDataSetProducerTest {
     @Test
     public void createDataSetFromDirectoryFilterExcludeFile() throws DataSetException {
         final File src = new File(this.resource, "csvquery/multifile");
-        final ComparableDataSetImpl actual = new ComparableDataSetImpl(
+        final ComparableDataSet actual = new ComparableDataSet(
                 new ComparableCSVQueryDataSetProducer(
                         ComparableDataSetParam.builder()
                                 .setSrc(src)
